<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simongonzalez.asignacionsemana2.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/layout_nombre">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_nombre"
                android:id="@+id/edittext_nombre">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_nombre"
            android:text="@string/title_fecha"
            android:id="@+id/title_fecha"
            android:paddingTop="10dp"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/title_fecha"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:id="@+id/datepicker_fecha"></DatePicker>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/datepicker_fecha"
            android:id="@+id/layout_telefono">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_telefono"
                android:id="@+id/edittext_telefono">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/layout_telefono"
            android:id="@+id/layout_email">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_email"
                android:id="@+id/edittext_email">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/layout_email"
            android:id="@+id/layout_descripcion">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_descripcion"
                android:id="@+id/edittext_descripcion"
                android:lines="2"
                android:gravity="top|left">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_descripcion"
            android:text="@string/btn_siguiente"
            android:theme="@style/BotonAplicacion"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
