<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simongonzalez.asignacionsemana2.ConfirmarDatos">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_confirmar_datos"
            android:id="@+id/confirmar_datos"
            android:gravity="center"
            android:textSize="20dp"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/confirmar_datos"
            android:id="@+id/nombre_valor">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_nombre"
                android:textStyle="bold"
                android:paddingRight="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="valor_nombre"
                android:id="@+id/valor_nombre"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/nombre_valor"
            android:id="@+id/fecha_valor">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_fecha_nacimiento"
                android:textStyle="bold"
                android:paddingRight="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="valor_fecha"
                android:id="@+id/valor_fecha"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/fecha_valor"
            android:id="@+id/telefono_valor">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_telefono"
                android:textStyle="bold"
                android:paddingRight="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="valor_telefono"
                android:id="@+id/valor_telefono"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/telefono_valor"
            android:id="@+id/email_valor">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_email"
                android:textStyle="bold"
                android:paddingRight="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="valor_email"
                android:id="@+id/valor_email"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/email_valor"
            android:id="@+id/descripcion_valor"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_descripcion"
                android:textStyle="bold"
                android:paddingRight="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="valor_descripcion"
                android:id="@+id/valor_descripcion"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_editar_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descripcion_valor"
            android:text="@string/btn_editar_datos"
            android:theme="@style/BotonAplicacion"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
